--- a/Api_Calls.ipynb
+++ b/Api_Calls.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-14T18:29:18.903574Z",
-     "start_time": "2021-03-14T18:29:16.747623Z"
+     "end_time": "2021-03-15T11:20:33.708531Z",
+     "start_time": "2021-03-15T11:20:26.943634Z"
     }
    },
    "outputs": [],
@@ -30,281 +30,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dateutil.parser.parse()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 88,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-14T18:29:22.521967Z",
-     "start_time": "2021-03-14T18:29:22.511987Z"
+     "end_time": "2021-03-15T19:03:45.073880Z",
+     "start_time": "2021-03-15T19:03:45.064055Z"
     }
    },
    "outputs": [],
    "source": [
-    "start_date = datetime.date(2010,1,1)\n",
-    "end_date = datetime.date(2021,3,1)\n",
+    "# numweeks = 533\n",
+    "# base = datetime.datetime.today()\n",
+    "# date_list = [base - datetime.timedelta(weeks = x) for x in range(numweeks)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-16T20:41:55.209419Z",
+     "start_time": "2021-03-16T20:41:55.181022Z"
+    }
+   },
+   "outputs": [],
+   "source": [
     "def send_request(date):\n",
-    "    headers = {'Accept-Language': 'en-US,en;q=0.5'}\n",
-    "    api_key = '8H770iyWiY9GaSuw2eULzJjGZVKw73AF'\n",
-    "    base_url = 'https://api.nytimes.com/svc/books/v3/lists/overview.json?published_date='\n",
-    "    url = base_url +str(start_date)+'&api-key='+api_key+'&ref_=adv_nxt'\n",
-    "    response = requests.get(url, headers=headers).json()\n",
-    "    time.sleep(randint(2,10))\n",
-    "    return response\n",
-    "    return response"
+    "    bad_list=[]\n",
+    "    try:\n",
+    "        headers = {'Accept-Language': 'en-US,en;q=0.5'}\n",
+    "        api_key = 'zRJXJxjyXQ4wICf08bZbSFmyPpeNAoVW'\n",
+    "        base_url = 'https://api.nytimes.com/svc/books/v3/lists/overview.json?published_date='\n",
+    "        url = base_url +date+'&api-key='+api_key+'&ref_=adv_nxt'\n",
+    "        response = requests.get(url, headers=headers).json()\n",
+    "        NYT_DATA = parse_response(response)\n",
+    "        time.sleep(randint(6,10))\n",
+    "        return NYT_DATA\n",
+    "    except KeyError as e:\n",
+    "        bad_list.append(response)\n",
+    "        print(bad_list)\n",
+    "        print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 300,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-14T18:29:26.944871Z",
-     "start_time": "2021-03-14T18:29:23.930116Z"
+     "end_time": "2021-03-16T20:41:56.328388Z",
+     "start_time": "2021-03-16T20:41:56.156825Z"
     }
-   },
-   "outputs": [],
-   "source": [
-    "responce = send_request(start_date)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-14T22:11:53.508010Z",
-     "start_time": "2021-03-14T22:11:53.496011Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['status', 'copyright', 'num_results', 'results'])"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "responce.keys()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-15T01:35:48.106171Z",
-     "start_time": "2021-03-15T01:35:48.100482Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "results = responce['results']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-15T01:36:03.243782Z",
-     "start_time": "2021-03-15T01:36:03.231471Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['bestsellers_date', 'published_date', 'published_date_description', 'previous_published_date', 'next_published_date', 'lists'])"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-14T18:29:28.090118Z",
-     "start_time": "2021-03-14T18:29:28.084180Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "lists = responce['results']['lists']\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-08T18:06:52.341597Z",
-     "start_time": "2021-03-08T18:06:52.334783Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14"
-      ]
-     },
-     "execution_count": 159,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(lists)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-14T18:29:35.122833Z",
-     "start_time": "2021-03-14T18:29:35.113311Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "first_list = lists[0]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-14T22:10:58.106594Z",
-     "start_time": "2021-03-14T22:10:58.077733Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['list_id', 'list_name', 'list_name_encoded', 'display_name', 'updated', 'list_image', 'list_image_width', 'list_image_height', 'books'])"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "first_list.keys()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-15T01:44:35.313334Z",
-     "start_time": "2021-03-15T01:44:35.306717Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'WEEKLY'"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "first_list['updated']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-15T01:48:39.675615Z",
-     "start_time": "2021-03-15T01:48:39.672137Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "books = first_list['books']\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-15T01:49:02.819794Z",
-     "start_time": "2021-03-15T01:49:02.811403Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['age_group', 'amazon_product_url', 'article_chapter_link', 'author', 'book_image', 'book_image_width', 'book_image_height', 'book_review_link', 'contributor', 'contributor_note', 'created_date', 'description', 'first_chapter_link', 'price', 'primary_isbn10', 'primary_isbn13', 'book_uri', 'publisher', 'rank', 'rank_last_week', 'sunday_review_link', 'title', 'updated_date', 'weeks_on_list', 'buy_links'])"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "books[0].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-15T02:17:17.882170Z",
-     "start_time": "2021-03-15T02:17:17.868335Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#books[0]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-15T02:22:15.672937Z",
-     "start_time": "2021-03-15T02:22:15.597978Z"
-    },
-    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -332,7 +107,7 @@
     "    status = response['status']\n",
     "    if status == 'OK':\n",
     "        lists = response['results']['lists']\n",
-    "        date = dateutil.parser.parse(response['results']['published_date'])\n",
+    "        pub_date = dateutil.parser.parse(response['results']['published_date'])\n",
     "        sell_date = dateutil.parser.parse(response['results']['bestsellers_date'])\n",
     "        for lis in lists: \n",
     "            #this_list = list[lis]\n",
@@ -346,7 +121,7 @@
     "                data['Weeks_on_List'].append(book['weeks_on_list'])\n",
     "                data['List_Type'].append(lis['list_name'])\n",
     "                data['Update_Interval'].append(lis['updated'])\n",
-    "                data['List_Published_Date'].append(date)\n",
+    "                data['List_Published_Date'].append(pub_date)\n",
     "                data['BestSeller_Date'].append(sell_date)\n",
     "                data['Amazon_Link'].append(book['buy_links'][0]['url'])\n",
     "                data['Apple_Books_Link'].append(book['buy_links'][1]['url'])\n",
@@ -355,10 +130,206 @@
     "                data['Bookshop_Link'].append(book['buy_links'][4]['url'])\n",
     "                data['IndieBound_Link'].append(book['buy_links'][5]['url'])\n",
     "    NYT_Data = pd.DataFrame(data) \n",
-    "    pd.to\n",
-    "    print(\"DONE\")\n",
+    "    #pd.to\n",
     "    return NYT_Data\n",
     "               "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-16T22:00:46.442915Z",
+     "start_time": "2021-03-16T22:00:46.375162Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def get_full_data(date):\n",
+    "    #inputing date to start loop\n",
+    "    full_data = []\n",
+    "    bad_dates =[]\n",
+    "    for date in weeks_in_range:\n",
+    "        try:\n",
+    "            \n",
+    "            #loop will continue until start_date is equal to end_date\n",
+    "            #setting start and end_dates\n",
+    "            new_request = send_request(date[0]+'-'+date[1]+'-'+date[2])\n",
+    "            full_data.append(new_request)\n",
+    "            print(date)\n",
+    "        \n",
+    "        except KeyError as e:\n",
+    "            bad_dates.append(date)\n",
+    "    return full_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-16T22:00:26.478982Z",
+     "start_time": "2021-03-16T22:00:26.322581Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "weeks_in_range = [x.split(' ') for x in pd.date_range(first_end_date, end_date, freq='W').strftime(\"%Y %m %d\").tolist()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-16T22:07:38.897938Z",
+     "start_time": "2021-03-16T22:07:38.850282Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#weeks_in_range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-16T20:40:12.297572Z",
+     "start_time": "2021-03-16T20:40:12.283248Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#start_date =datetime.date(2010,1,1)\n",
+    "end_date = datetime.date(2021,3,14)\n",
+    "first_end_date = datetime.date(2016,10,30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-16T20:20:52.083475Z",
+     "start_time": "2021-03-16T20:20:52.078741Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#first_weeks_in_range = [x.split(' ') for x in pd.date_range(start_date, first_end_date, freq=\"W\").strftime(\"%Y %-m %d\").tolist()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-16T20:36:50.007315Z",
+     "start_time": "2021-03-16T20:36:49.982202Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#two_weeks_in_range = [x.split(' ') for x in pd.date_range(start_date, end_date, freq=\"W\").strftime(\"%Y %m %d\").tolist()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2021-03-16T22:08:13.500Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2016', '10', '30']\n",
+      "['2016', '11', '06']\n",
+      "['2016', '11', '13']\n",
+      "['2016', '11', '20']\n",
+      "['2016', '11', '27']\n",
+      "['2016', '12', '04']\n",
+      "['2016', '12', '11']\n",
+      "['2016', '12', '18']\n",
+      "['2016', '12', '25']\n",
+      "['2017', '01', '01']\n",
+      "['2017', '01', '08']\n",
+      "['2017', '01', '15']\n",
+      "['2017', '01', '22']\n",
+      "['2017', '01', '29']\n",
+      "['2017', '02', '05']\n",
+      "['2017', '02', '12']\n",
+      "['2017', '02', '19']\n",
+      "['2017', '02', '26']\n",
+      "['2017', '03', '05']\n",
+      "['2017', '03', '12']\n",
+      "['2017', '03', '19']\n",
+      "['2017', '03', '26']\n",
+      "['2017', '04', '02']\n",
+      "['2017', '04', '09']\n",
+      "['2017', '04', '16']\n",
+      "['2017', '04', '23']\n",
+      "['2017', '04', '30']\n",
+      "['2017', '05', '07']\n",
+      "['2017', '05', '14']\n",
+      "['2017', '05', '21']\n",
+      "['2017', '05', '28']\n",
+      "['2017', '06', '04']\n",
+      "['2017', '06', '11']\n",
+      "['2017', '06', '18']\n",
+      "['2017', '06', '25']\n",
+      "['2017', '07', '02']\n",
+      "['2017', '07', '09']\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = get_full_data(first_end_date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-16T21:40:39.662931Z",
+     "start_time": "2021-03-16T21:40:39.658676Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-16T20:26:47.693942Z",
+     "start_time": "2021-03-16T20:26:47.666967Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2010,1,03\n",
+      "2010,1,10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for date in two_weeks_in_range:\n",
+    "    print(date[0]+','+date[1]+','+date[2])"
    ]
   },
   {
@@ -377,28 +348,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T02:22:44.234846Z",
-     "start_time": "2021-03-15T02:22:44.216189Z"
+     "end_time": "2021-03-15T11:20:22.677839Z",
+     "start_time": "2021-03-15T11:20:22.672901Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'NYT_Data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-105-53e0d7fe4476>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mNYT_Data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'NYT_Data' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "NYT_Data"
+    "#NYT_Data"
    ]
   },
   {
@@ -442,20 +401,6 @@
     "#         return df\n",
     "#     except IndexError as e: print(e)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -474,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.13"
   },
   "toc": {
    "base_numbering": 1,
