--- a/Api_Calls.ipynb
+++ b/Api_Calls.ipynb
@@ -2,14 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 334,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:20:33.708531Z",
-     "start_time": "2021-03-15T11:20:26.943634Z"
+     "end_time": "2021-03-16T22:55:21.190290Z",
+     "start_time": "2021-03-16T22:55:21.146781Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'to_csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-334-0ead135684a0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mto_csv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdateutil\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdateutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrelativedelta\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrelativedelta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'to_csv'"
+     ]
+    }
+   ],
    "source": [
     "import requests \n",
     "from bs4 import BeautifulSoup\n",
@@ -24,6 +36,7 @@
     "import json\n",
     "import time\n",
     "import datetime\n",
+    "import pickle\n",
     "import dateutil\n",
     "from dateutil.relativedelta import relativedelta\n"
    ]
@@ -238,74 +251,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 322,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-16T22:08:13.500Z"
+     "end_time": "2021-03-16T22:42:24.344013Z",
+     "start_time": "2021-03-16T22:42:24.297996Z"
     },
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['2016', '10', '30']\n",
-      "['2016', '11', '06']\n",
-      "['2016', '11', '13']\n",
-      "['2016', '11', '20']\n",
-      "['2016', '11', '27']\n",
-      "['2016', '12', '04']\n",
-      "['2016', '12', '11']\n",
-      "['2016', '12', '18']\n",
-      "['2016', '12', '25']\n",
-      "['2017', '01', '01']\n",
-      "['2017', '01', '08']\n",
-      "['2017', '01', '15']\n",
-      "['2017', '01', '22']\n",
-      "['2017', '01', '29']\n",
-      "['2017', '02', '05']\n",
-      "['2017', '02', '12']\n",
-      "['2017', '02', '19']\n",
-      "['2017', '02', '26']\n",
-      "['2017', '03', '05']\n",
-      "['2017', '03', '12']\n",
-      "['2017', '03', '19']\n",
-      "['2017', '03', '26']\n",
-      "['2017', '04', '02']\n",
-      "['2017', '04', '09']\n",
-      "['2017', '04', '16']\n",
-      "['2017', '04', '23']\n",
-      "['2017', '04', '30']\n",
-      "['2017', '05', '07']\n",
-      "['2017', '05', '14']\n",
-      "['2017', '05', '21']\n",
-      "['2017', '05', '28']\n",
-      "['2017', '06', '04']\n",
-      "['2017', '06', '11']\n",
-      "['2017', '06', '18']\n",
-      "['2017', '06', '25']\n",
-      "['2017', '07', '02']\n",
-      "['2017', '07', '09']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "y = get_full_data(first_end_date)"
+    "#y = get_full_data(first_end_date)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 323,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-16T21:40:39.662931Z",
-     "start_time": "2021-03-16T21:40:39.658676Z"
+     "end_time": "2021-03-16T22:42:33.564351Z",
+     "start_time": "2021-03-16T22:42:33.546965Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "357"
+      ]
+     },
+     "execution_count": 323,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 324,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-16T22:42:40.861520Z",
+     "start_time": "2021-03-16T22:42:40.852997Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "229"
+      ]
+     },
+     "execution_count": 324,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 325,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-16T22:42:44.732851Z",
+     "start_time": "2021-03-16T22:42:44.722119Z"
     }
    },
    "outputs": [],
    "source": [
-    "#x"
+    "x.extend(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 326,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-16T22:42:54.422489Z",
+     "start_time": "2021-03-16T22:42:54.414029Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "586"
+      ]
+     },
+     "execution_count": 326,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(x)"
    ]
   },
   {
@@ -334,16 +379,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 333,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T02:22:40.435622Z",
-     "start_time": "2021-03-15T02:22:40.431508Z"
+     "end_time": "2021-03-16T22:53:05.875507Z",
+     "start_time": "2021-03-16T22:53:05.859813Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'to_pickle'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-333-e4a3877904a5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_pickle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./NYT_API_CALLS.pkl'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'to_pickle'"
+     ]
+    }
+   ],
+   "source": [
+    "pd.to_pickle(x,'./NYT_API_CALLS.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-16T22:48:27.694361Z",
+     "start_time": "2021-03-16T22:48:25.784991Z"
     }
    },
    "outputs": [],
    "source": [
-    "#parse_response(send_request(start_date))"
+    "pd.to_pickle(x,'./NYT_API_CALL.pkl','zip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-16T22:49:28.627305Z",
+     "start_time": "2021-03-16T22:49:28.550528Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './NTY_API_CALL.pkl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-332-e66701ff28cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_pickle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./NTY_API_CALL.pkl'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/kelvinarellano/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages/pandas/io/pickle.py\u001b[0m in \u001b[0;36mread_pickle\u001b[0;34m(filepath_or_buffer, compression)\u001b[0m\n\u001b[1;32m    167\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp_or_buf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mcompression\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"infer\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    168\u001b[0m         \u001b[0mcompression\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 169\u001b[0;31m     \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_handle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp_or_buf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompression\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcompression\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mis_text\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    170\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    171\u001b[0m     \u001b[0;31m# 1) try standard library Pickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/kelvinarellano/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages/pandas/io/common.py\u001b[0m in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors)\u001b[0m\n\u001b[1;32m    497\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    498\u001b[0m             \u001b[0;31m# Binary mode\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 499\u001b[0;31m             \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_or_buf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    500\u001b[0m         \u001b[0mhandles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    501\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './NTY_API_CALL.pkl'"
+     ]
+    }
+   ],
+   "source": [
+    "pd.read_pickle('./NTY_API_CALL.pkl')"
    ]
   },
   {
@@ -401,6 +500,92 @@
     "#         return df\n",
     "#     except IndexError as e: print(e)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 336,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-16T22:58:10.292131Z",
+     "start_time": "2021-03-16T22:58:08.716335Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "INSTALLED VERSIONS\n",
+      "------------------\n",
+      "commit           : db08276bc116c438d3fdee492026f8223584c477\n",
+      "python           : 3.6.13.final.0\n",
+      "python-bits      : 64\n",
+      "OS               : Darwin\n",
+      "OS-release       : 19.6.0\n",
+      "Version          : Darwin Kernel Version 19.6.0: Thu Oct 29 22:56:45 PDT 2020; root:xnu-6153.141.2.2~1/RELEASE_X86_64\n",
+      "machine          : x86_64\n",
+      "processor        : i386\n",
+      "byteorder        : little\n",
+      "LC_ALL           : None\n",
+      "LANG             : en_US.UTF-8\n",
+      "LOCALE           : en_US.UTF-8\n",
+      "\n",
+      "pandas           : 1.1.3\n",
+      "numpy            : 1.19.2\n",
+      "pytz             : 2021.1\n",
+      "dateutil         : 2.8.1\n",
+      "pip              : 21.0.1\n",
+      "setuptools       : 52.0.0.post20210125\n",
+      "Cython           : 0.29.22\n",
+      "pytest           : None\n",
+      "hypothesis       : None\n",
+      "sphinx           : None\n",
+      "blosc            : None\n",
+      "feather          : None\n",
+      "xlsxwriter       : None\n",
+      "lxml.etree       : 4.6.2\n",
+      "html5lib         : None\n",
+      "pymysql          : None\n",
+      "psycopg2         : None\n",
+      "jinja2           : 2.11.3\n",
+      "IPython          : 5.8.0\n",
+      "pandas_datareader: None\n",
+      "bs4              : 4.9.3\n",
+      "bottleneck       : None\n",
+      "fsspec           : None\n",
+      "fastparquet      : None\n",
+      "gcsfs            : None\n",
+      "matplotlib       : 3.3.4\n",
+      "numexpr          : None\n",
+      "odfpy            : None\n",
+      "openpyxl         : None\n",
+      "pandas_gbq       : None\n",
+      "pyarrow          : None\n",
+      "pytables         : None\n",
+      "pyxlsb           : None\n",
+      "s3fs             : None\n",
+      "scipy            : 1.5.2\n",
+      "sqlalchemy       : None\n",
+      "tables           : None\n",
+      "tabulate         : None\n",
+      "xarray           : None\n",
+      "xlrd             : 1.2.0\n",
+      "xlwt             : None\n",
+      "numba            : None\n"
+     ]
+    }
+   ],
+   "source": [
+    "pd.show_versions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
