--- a/Wiki_scrapper.ipynb
+++ b/Wiki_scrapper.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "local-mandate",
+   "execution_count": 24,
+   "id": "attractive-stopping",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-16T15:54:04.168910Z",
-     "start_time": "2021-03-16T15:54:04.160344Z"
+     "end_time": "2021-03-17T19:04:07.394504Z",
+     "start_time": "2021-03-17T19:04:07.308015Z"
     }
    },
    "outputs": [],
@@ -25,13 +25,28 @@
     "import json\n",
     "import time\n",
     "import datetime\n",
-    "import dateutil"
+    "from pathlib import Path\n",
+    "import pickle\n",
+    "import dateutil\n",
+    "from selenium import webdriver\n",
+    "import lxml\n",
+    "from dateutil.relativedelta import relativedelta\n",
+    "import time\n",
+    "import random\n",
+    "from os import system\n",
+    "from math import floor\n",
+    "from copy import deepcopy\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.common.exceptions import TimeoutException\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "sapphire-helena",
+   "id": "dominant-dominant",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-16T15:54:05.109715Z",
@@ -46,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "curious-composite",
+   "id": "upper-spelling",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-16T15:58:22.794781Z",
@@ -61,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "comfortable-variety",
+   "id": "fatal-monitoring",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-16T15:58:23.681347Z",
@@ -76,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "polish-manner",
+   "id": "sustainable-identification",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-16T15:59:20.878518Z",
@@ -103,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "worse-second",
+   "id": "powered-breach",
    "metadata": {},
    "outputs": [],
    "source": [
