initial modeling done

--- a/Wiki_scrapper.ipynb
+++ b/Wiki_scrapper.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "attractive-stopping",
+   "execution_count": 2,
+   "id": "downtown-magazine",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-17T19:04:07.394504Z",
-     "start_time": "2021-03-17T19:04:07.308015Z"
+     "end_time": "2021-03-19T13:22:50.369489Z",
+     "start_time": "2021-03-19T13:22:50.328673Z"
     }
    },
    "outputs": [],
@@ -33,6 +33,7 @@
     "from dateutil.relativedelta import relativedelta\n",
     "import time\n",
     "import random\n",
+    "import wikipedia\n",
     "from os import system\n",
     "from math import floor\n",
     "from copy import deepcopy\n",
@@ -45,88 +46,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "dominant-dominant",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-16T15:54:05.109715Z",
-     "start_time": "2021-03-16T15:54:04.951618Z"
-    }
-   },
+   "execution_count": null,
+   "id": "classical-telling",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get(url='https://en.wikipedia.org/wiki/1635:_The_Eastern_Front')"
+    "for i in year_list:\n",
+    "    html = requests.get(f'https://en.wikipedia.org/wiki/{i}_in_literature')\n",
+    "    soup = BeautifulSoup(html.text,'lxml')\n",
+    "    for i in soup_1.find_all(name = 'li'):\n",
+    "        for link in i\n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "upper-spelling",
+   "execution_count": 184,
+   "id": "healthy-turkish",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-16T15:58:22.794781Z",
-     "start_time": "2021-03-16T15:58:22.604452Z"
+     "end_time": "2021-03-19T16:36:04.067046Z",
+     "start_time": "2021-03-19T16:36:04.063325Z"
     }
    },
    "outputs": [],
    "source": [
-    "soup = BeautifulSoup(response.content, 'html.parser')"
+    "full_links"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "fatal-monitoring",
+   "execution_count": 353,
+   "id": "indonesian-treatment",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-16T15:58:23.681347Z",
-     "start_time": "2021-03-16T15:58:23.667209Z"
+     "end_time": "2021-03-19T17:25:45.346089Z",
+     "start_time": "2021-03-19T17:25:44.916115Z"
     }
    },
    "outputs": [],
    "source": [
-    "title = soup.find(id='firstHeading')"
+    "html_1 = requests.get('https://en.wikipedia.org/wiki/2015_in_literature')\n",
+    "soup_1 = BeautifulSoup(html_1.text,'lxml')\n",
+    "links = []\n",
+    "for i in soup_1.find_all(name = 'li'):\n",
+    "    for link in i.find_all('a', href=True):\n",
+    "        links.append(link['href'])    \n",
+    "#2008links = links[81:-507]\n",
+    "#2009links = links[105:-591]\n",
+    "#2010links = links[118:-721]\n",
+    "#2011links = links[76:-982]\n",
+    "#2012links = links[97:-581]\n",
+    "#2013links = links[111:-646]\n",
+    "#2014links = links[159:-565]\n",
+    "#2015links = links[121:-510]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "sustainable-identification",
+   "execution_count": 358,
+   "id": "damaged-database",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-16T15:59:20.878518Z",
-     "start_time": "2021-03-16T15:59:20.869355Z"
+     "end_time": "2021-03-19T17:25:54.314671Z",
+     "start_time": "2021-03-19T17:25:54.294612Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1635: The Eastern Front'"
+       "1888"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 358,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "title.string"
+    "len(full_links)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 357,
+   "id": "graphic-venice",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-19T17:25:51.498145Z",
+     "start_time": "2021-03-19T17:25:51.493184Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "full_links.extend(links)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "frequent-endorsement",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-19T15:36:10.157687Z",
+     "start_time": "2021-03-19T15:36:09.914557Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "html = requests.get('https://en.wikipedia.org/wiki/The_White_Tiger_(Adiga_novel)')\n",
+    "soup = BeautifulSoup(html.text, 'lxml')\n",
+    "tables = []\n",
+    "for t in soup.find_all(name = 'table', class_='infobox vcard'):\n",
+    "    for i in t.find_all('a', href=True, class_=''):\n",
+    "        tables.append(i.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "dietary-verse",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-19T14:55:12.879975Z",
+     "start_time": "2021-03-19T14:55:12.860648Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Aravind Adiga',\n",
+       " 'Picaresque novel',\n",
+       " 'Atlantic Books',\n",
+       " 'HarperCollins',\n",
+       " 'hardback',\n",
+       " '1-4165-6259-1',\n",
+       " 'Dewey Decimal']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tables\n",
+    "#lstm\n",
+    "#adding features before embedding\n",
+    "#look into tfidf\n",
+    "#rnn fo rreviews and tweets and concatinate then add exojinous\n",
+    "#combining hidden states\n",
+    "#then combining in a feet forward model for neural networks\n",
+    "#going into lexiconal\n",
+    "#going into the neural network\n",
+    "#gru transformers"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "powered-breach",
+   "id": "freelance-avatar",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def scrape_books(url):\n",
-    "    response = requests.get(url=url,)\n",
-    "    soup = BeautifulSoup(response.content, 'html.parser')\n",
-    "    title = soup.find(id=\"firstHeading\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
